--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
+<!DOCTYPE>
 <html>
-  <head><title>la convención</title></head>
+  <head><title>la convención</title>
+  <style>
+    
+    a:active {
+      color:#00FF00
+    }
+    a:visited {
+      color:#FF0000;
+    }
+    a:link {
+      color:#0000FF;
+    }
+    body {
+      color:yellow
+      background-image: url(w3s.png);
+     background-color: #E6E6FA;
+  }
+  </style>
+  </head>
   <body>
-    <h1></h1>
-    <p></p>
+    <h1>Comidas de la convencion</h1>
+    <p>Ubicada al norte del Cusco, en el antiguo territorio del Antisuyo incaico, 
+      La Convención es la provincia más extensa del departamento, abarcando el 48 % 
+      del territorio regional (30,061.82 km²). Limita con seis departamentos y provincias, 
+      y presenta un clima muy variado, desde zonas frías de altura hasta selva baja tropical.
+      Su capital es Quillabamba, ubicada a 1050 m s. n. m. El territorio posee 16 pisos ecológicos,
+      lo que permite una riqueza agrícola en sus tres regiones naturales: Sierra, Ceja de Selva y Selva Baja.
+      Tiene más de 180 mil habitantes distribuidos en 14 distritos.</p>
   </body>
 </html>
