--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </style>
   </head>
   <body>
-    <h1>Comidas de la convencion</h1>
+    <h1>la convencion</h1>
+    <h2>1)Área</h2>
     <p>Ubicada al norte del Cusco, en el antiguo territorio del Antisuyo incaico, 
       La Convención es la provincia más extensa del departamento, abarcando el 48 % 
       del territorio regional (30,061.82 km²). Limita con seis departamentos y provincias, 
@@ -28,5 +29,63 @@
       Su capital es Quillabamba, ubicada a 1050 m s. n. m. El territorio posee 16 pisos ecológicos,
       lo que permite una riqueza agrícola en sus tres regiones naturales: Sierra, Ceja de Selva y Selva Baja.
       Tiene más de 180 mil habitantes distribuidos en 14 distritos.</p>
+    <h2>2) Historia</h2>
+    <p>
+      Creada el 25 de julio de 1857, La Convención fue originalmente habitada por pueblos indígenas de la ceja de
+      selva y amazónicos. Durante la colonia, se convirtió en una zona de haciendas agrícolas. Su capital, Quillabamba, 
+      fue elevada a villa en 1918 y a ciudad en 1957. La provincia fue escenario de luchas sociales y del descubrimiento
+      de hidrocarburos en Camisea.
+    </p>
+    <h2>3)División Política</h2>
+    <p>La provincia de La Convención está compuesta por 18 distritos, con capital en Quillabamba. Entre los más antiguos
+      están Santa Ana, Echarate, Huayopata, Vilcabamba y Ocobamba. Otros distritos como Kimbiri, Pichari y Megantoni se 
+      crearon posteriormente, principalmente en la zona del VRAEM. Esta división refleja el crecimiento poblacional y la 
+      integración de comunidades rurales y nativas en la estructura administrativa.</p>
+    <h2>4)Economía y Educación</h2>
+    <p>
+      La economía se basa en la agricultura, con productos como café, cacao, cítricos, plátano y coca. Gracias a sus 16 pisos
+      ecológicos, la provincia tiene una alta diversidad productiva. En la selva se da también la extracción de recursos como 
+      madera e hidrocarburos (destacando el proyecto de Camisea).
+      En cuanto a educación, en 2023 se registraron más de 58,000 estudiantes distribuidos entre educación inicial, primaria,
+      secundaria, técnica y superior. Destacan instituciones como la Universidad Nacional Intercultural de Quillabamba. La mayoría
+      de los centros educativos están bajo gestión pública, aunque también existen propuestas privadas y comunitarias, especialmente
+      en zonas rurales.
+    </p>
+    <h2>5)Cultura y Festividades</h2>
+    <p>
+      La Convención conserva un fuerte legado cultural andino y amazónico. Las festividades más destacadas son el Cruz Velacuy, una 
+      celebración tradicional andina con danzas y rituales, y el Señor de Torrechayoc, patrono de Quillabamba, celebrado con 
+      procesiones, bandas y concursos folklóricos. Estas fiestas fortalecen la identidad local y reúnen a comunidades de toda la 
+      provincia.
+    </p>
+    <h1>🍽️ Platos típicos de La Convención</h1>
+    <h2>1. Paco frito </h2>
+    <p>
+      Un pescado de río muy apreciado, sazonado con ají panca, ajo y comino, frito hasta quedar crujiente. Se sirve con yuca hervida 
+      y sarza criolla. ¡Una delicia selvática!
+    </p>
+    <h2>2. Pato al horno con tallarín </h2>
+    <p>
+      Pato marinado y horneado, acompañado de tallarines al estilo selvático. A veces se combina con cuy o gallina,
+      y se sirve con plátano y yuca.
+    </p>
+    <h2>3. Chaque de plátano con gallina </h2>
+    <p>Una sopa espesa y reconfortante hecha con plátano verde chancado, gallina, yuca, papa y culantro.
+      Se acompaña con mote, ensalada de cebolla y rocoto
+    </p>
+    <h1>Festividades de La Convención</h1>
+    <h2>1)Carnavales Convencianos (febrero): </h2>
+    <p>
+      Celebrados con pasacalles, danzas, música y juegos tradicionales en Quillabamba y otros distritos. Es una de las 
+      fiestas más coloridas y participativas del año.
+    </p>
+    <h2>2)Semana Turística y Aniversario de La Convención (25–29 de julio):</h2>
+    <p>Conmemora la creación política de la provincia. Incluye ferias gastronómicas, concursos, elección de la Reina del 
+      Café, actividades deportivas y culturales.</p>
+    <h2>3)Fiesta del Señor de Torrechayoc (mayo):</h2>
+    <p>Festividad religiosa de gran devoción en Quillabamba, con procesiones, danzas típicas y misas solemnes.</p>
+    <h2>4)Festival del Café (julio): </h2>
+    <p>Parte de la semana turística, celebra la producción cafetalera con degustaciones, concursos y exposiciones de 
+      productores locales</p>
   </body>
 </html>
