--- a/index.html
+++ b/index.html
@@ -80,12 +80,47 @@
       fiestas más coloridas y participativas del año.
     </p>
     <h2>2)Semana Turística y Aniversario de La Convención (25–29 de julio):</h2>
-    <p>Conmemora la creación política de la provincia. Incluye ferias gastronómicas, concursos, elección de la Reina del 
-      Café, actividades deportivas y culturales.</p>
+    <p>
+      Conmemora la creación política de la provincia. Incluye ferias gastronómicas, concursos, elección de la Reina del 
+      Café, actividades deportivas y culturales.
+    </p>
     <h2>3)Fiesta del Señor de Torrechayoc (mayo):</h2>
-    <p>Festividad religiosa de gran devoción en Quillabamba, con procesiones, danzas típicas y misas solemnes.</p>
+    <p>
+      Festividad religiosa de gran devoción en Quillabamba, con procesiones, danzas típicas y misas solemnes.
+    </p>
     <h2>4)Festival del Café (julio): </h2>
-    <p>Parte de la semana turística, celebra la producción cafetalera con degustaciones, concursos y exposiciones de 
-      productores locales</p>
+    <p>
+      Parte de la semana turística, celebra la producción cafetalera con degustaciones, concursos y exposiciones de 
+      productores locales
+    </p>
+    <h1>🗺️ Datos curiosos de La Convención</h1> 
+    <h2>1. Fue parte del Antisuyo incaico:</h2> 
+    <p>La Convención formaba parte 
+      del Antisuyo, una de las cuatro regiones del Tahuantinsuyo. Su territorio era clave para conectar la sierra con la selva 
+      y abastecer al imperio con productos amazónicos. 
+    </p>
+    <h2>2. Tiene hasta 16 pisos ecológicos: </h2>
+    <p>
+      Desde las alturas frías del abra Málaga hasta el calor húmedo del Bajo Urubamba, La Convención alberga una variedad impresionante
+      de climas y ecosistemas. ¡Es como recorrer varios países en una sola provincia! </p>
+    <h2>3. Su capital, Quillabamba, nació gracias a una donación: </h2>
+    <p>
+      En 1881, dos hacendados donaron terrenos para fundar lo que hoy es Quillabamba. Años después, en 1918, fue elevada a 
+      la categoría de Villa y luego a Ciudad. </p> <h2>4. Fue epicentro de luchas sociales en los años 60 y 70: 
+      </h2>
+    <p>
+      La Convención fue escenario de intensas luchas campesinas que lograron la expulsión de terratenientes y marcaron un hito en la 
+      historia agraria del Perú. 
+    </p>
+    <h2>5. Su territorio fue mucho más grande Originalmente: </h2>
+    <p>
+      La Convención abarcaba zonas que hoy pertenecen a Madre de Dios, Ucayali y Satipo. Con el tiempo, su extensión se redujo a una 
+      décima parte. 
+    </p>
+    <h2>6. Tiene una de las celebraciones más coloridas del Cusco:</h2>
+    <p>
+      El Carnaval Convenciano es famoso por sus carros alegóricos, coplas, danzas y la elección de la reina del carnaval. ¡Una explosión
+      de cultura y alegría selvática! 
+    </p>
   </body>
 </html>
